Fix news on homepage cut off and more news not clickable (iphone)
close #40

--- a/sites/all/themes/cas/sass/_front.scss
+++ b/sites/all/themes/cas/sass/_front.scss
@@ -244,6 +244,8 @@
 	{
 		font-weight:300;
 		font-size:0.85em;
+		position: relative;
+		z-index: 1;
 	}
 }
 
